--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -6,27 +6,27 @@
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1>~ Homemade Margherita Pizza Recipe ~</h1>
-    <img src="../img/margherita.jpg" alt="margherita pizza" width="400">
+    <h1>~ Homemade Sushi Recipe ~</h1>
+    <img src="../img/sushi.webp" alt="a plate of sushi" width="400">
     <h2>Description but <em>Lorem Ipsum</em></h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
     <h2><em>A Portion of the</em> Ingredients</h2>
     <ul>
-      <li>3 ½ cups all-purpose flour</li>
-      <li>2 cups pizza sauce</li>
-      <li>20 slices fresh mozzarella cheese</li>
-      <li>1 (.25 ounce) package active dry yeast</li>
+      <li>3 tablespoons rice vinegar</li>
+      <li>4 sheets nori seaweed sheets</li>
+      <li>⅔ cup uncooked short-grain white rice</li>
+      <li>½ pound imitation crabmeat, flaked</li>
     </ul>
     <h2><em>A Portion of the</em> Steps</h2>
     <ol>
-      <li>Stir flour and 1 teaspoon salt in a bowl. Set aside.</li>
-      <li>Mix water, yeast, and sugar in a large bowl.</li>
-      <li>Stir half the flour mixture into yeast mixture until no dry spots remain.</li>
-      <li>Lightly oil a large bowl, then place dough in the bowl and turn to coat with oil.</li>
-      <li>Preheat oven with a pizza stone to 500 degrees F (260 degrees C).</li>
-      <li>Stretch out and pat 1 dough ball to form a circle 10 to 12 inches in diameter.</li>
-      <li>Slide each pizza onto the pizza stone in the preheated oven.</li>
+      <li>Preheat the oven to 300 degrees F (150 degrees C).</li>
+      <li>Bring water to a boil in a medium pot; stir in rice.</li>
+      <li>Mix rice vinegar, sugar, and salt in a small bowl.</li>
+      <li>Heat nori in the preheated oven until warm.</li>
+      <li>Center 1 nori sheet on a bamboo sushi mat. Use wet hands to spread a thin layer of rice on top.</li>
+      <li>Lift one end of the mat and roll it tightly over filling to make a complete roll.</li>
+      <li>Use a wet, sharp knife to cut each roll into 4 to 6 slices.</li>
     </ol>
     <p><em>The photo and recipe instructions were derived from <a href="https://www.allrecipes.com/recipe/222197/authentic-pizza-margherita/" target="_blank" rel="noopener noreferrer">allrecipes.com</a></em></p>
     <p><a href="../index.html">&#60; Go back to the homepage</a></p>
