Change dish titles in all html pages

--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -6,7 +6,7 @@
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1>~ Homemade Sushi Recipe ~</h1>
+    <h1>~ Homemade Sushi ~</h1>
     <img src="../img/sushi.webp" alt="a plate of sushi" width="400">
     <h2>Description but <em>Lorem Ipsum</em></h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
