--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="recipes/margherita.html">Margherita Pizza Recipe</a></li>
-      <li><a href="recipes/iskender-kebab.html">Iskender Kebab Recipe</a></li>
-      <li><a href="recipes/sushi.html">Sushi Recipe</a></li>
+      <li><a href="recipes/margherita.html">Margherita Pizza</a></li>
+      <li><a href="recipes/iskender-kebab.html">Iskender Kebab</a></li>
+      <li><a href="recipes/sushi.html">Homemade Sushi</a></li>
     </ul>
     <p>This website was created by <strong><a href="https://github.com/cethka" target="_blank">cethka</a></strong> for <strong><a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a></strong>.</p>
   </body>
