--- a/recipes/iskender-kebab.html
+++ b/recipes/iskender-kebab.html
@@ -6,7 +6,7 @@
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1>~ Homemade Iskender Kebab Recipe ~</h1>
+    <h1>~ Iskender Kebab ~</h1>
     <img src="../img/iskender.webp" alt="a plate of iskender kebab" width="400">
     <h2>Description but <em>Lorem Ipsum</em></h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
