Adjust text content of some recipes

--- a/recipes/iskender-kebab.html
+++ b/recipes/iskender-kebab.html
@@ -16,7 +16,7 @@
       <li>4 pita bread rounds</li>
       <li>4 skinless, boneless chicken breast halves - chopped</li>
       <li>1 (10.75 ounce) can tomato paste</li>
-      <li>1 cup Greek <strong>(or preferably Turkish)</strong> yogurt</li>
+      <li>1 cup of Greek (or <em>possibly</em> Turkish 😉) yogurt</li>
     </ul>
     <h2><em>A Portion of the</em> Steps</h2>
     <ol>
